<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/instruction_text"
        android:text="@string/instruction_text"
        android:textSize="30sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="casual"/>

    <Button
        android:id="@+id/rock_button"
        android:text="@string/rock"
        android:textSize="25sp"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:fontFamily="casual"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/instruction_text"/>

    <Button
        android:id="@+id/paper_button"
        android:text="@string/paper"
        android:textSize="25sp"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:fontFamily="casual"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/rock_button"/>

    <Button
        android:id="@+id/scissors_button"
        android:text="@string/scissors"
        android:textSize="25sp"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:fontFamily="casual"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/paper_button"/>

    <Button
        android:id="@+id/lizard_button"
        android:text="@string/lizard"
        android:textSize="25sp"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:fontFamily="casual"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/scissors_button"/>

    <Button
        android:id="@+id/spock_button"
        android:text="@string/spock"
        android:textSize="25sp"
        android:layout_width="150dp"
        android:layout_height="70dp"
        android:fontFamily="casual"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/lizard_button"/>

</RelativeLayout>